JSAI/error/src/test/resources/base/v029.js

var x = null == undefined;
print(x);